# pest-stop

./: .dockerignore  .gitignore  .oxfmtrc.json  Dockerfile  README.md  mise.toml
.github/workflows/: backend.yaml
.zed/: settings.json
backend/: Cargo.toml  Dockerfile
backend/src/: datasource.rs  main.rs
backend/src/api/: mod.rs  models.rs  routes.rs
watchapp/: README.md  mise.toml  package.json
watchapp/src/c/: watchapp.c
watchapp/src/pkjs/: config.json  index.js
