[package]
name = "bkk-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = "0.4"
gtfs-bin = { version = "0.1", default-features = false, features = ["compiler", "consumer"] }
memmap2 = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
